--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12.4", features = ["blocking"] }
+protobuf = "3.4.0"
+
+[build-dependencies]
+protobuf-codegen = "3.4.0"
