--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.12.4", features = ["blocking"] }
 protobuf = "3.4.0"
+csv = "1.3.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_repr = "0.1.19"
+httpdate = "1.0.3"
+zip = "2.1.3"
+chrono = "0.4.38"
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
