--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,14 @@ serde_repr = "0.1.19"
 httpdate = "1.0.3"
 zip = "2.1.3"
 chrono = "0.4.38"
-rbs = "4.5.13"
-rbatis = "4.5.24"
-rbdc-sqlite = "4.5.4"
+rbs = { git = "https://github.com/Davvos11/rbatis", package = "rbs" }
+rbatis = { git = "https://github.com/Davvos11/rbatis" }
+rbdc-sqlite = { git = "https://github.com/Davvos11/rbatis", package = "rbdc-sqlite" }
 tokio = { version = "1.38.0", features = ["full"] }
+itertools = "0.13.0"
+fastdate = "0.3.28"
+fast_log = "1.6.16"
+log = "0.4.22"
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
