--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ itertools = "0.13.0"
 fastdate = "0.3.28"
 fast_log = "1.6.16"
 log = "0.4.22"
+indicatif = "0.17.8"
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
