--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "reisplanner"
 version = "0.1.0"
 edition = "2021"
+authors = ["vosdavid2@gmail.com"]
 
 [dependencies]
 reqwest = { version = "0.12.4", features = ["blocking"] }
-protobuf = "3.4.0"
+protobuf = "3.5.0"
 csv = "1.3.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_repr = "0.1.19"
@@ -26,3 +27,4 @@ anyhow = "1.0.86"
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
+vergen = { version = "9.0.0", features = ["build", "cargo"]}
