--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,11 @@ rbdc-sqlite = { git = "https://github.com/Davvos11/rbatis", package = "rbdc-sqli
 tokio = { version = "1.38.0", features = ["full"] }
 itertools = "0.13.0"
 fastdate = "0.3.28"
-fast_log = "1.6.16"
-log = "0.4.22"
 indicatif = "0.17.8"
 thiserror = "1.0.61"
 anyhow = "1.0.86"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
