--- a/reisplanner-algorithm/Cargo.toml
+++ b/reisplanner-algorithm/Cargo.toml
@@ -14,3 +14,7 @@ anyhow = "1.0.86"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 indicatif = "0.17.8"
+serde = { version = "1.0.204", features = ["derive"] }
+bincode = "1.3.3"
+
+[dev-dependencies]
