--- a/reisplanner-gtfs/Cargo.toml
+++ b/reisplanner-gtfs/Cargo.toml
@@ -13,9 +13,9 @@ serde_repr = "0.1.19"
 httpdate = "1.0.3"
 zip = "2.1.3"
 chrono = "0.4.38"
-rbs = { git = "https://github.com/Davvos11/rbatis", package = "rbs" }
-rbatis = { git = "https://github.com/Davvos11/rbatis" }
-rbdc-sqlite = { git = "https://github.com/Davvos11/rbatis", package = "rbdc-sqlite" }
+rbs = "4.5.18"
+rbatis = "4.5.29"
+rbdc-sqlite = "4.5.5"
 tokio = { version = "1.38.0", features = ["full"] }
 itertools = "0.13.0"
 fastdate = "0.3.28"
