add iff parsing to collect transfer times

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
 
-members = ["reisplanner-algorithm", "reisplanner-gtfs"]
+members = ["reisplanner-algorithm", "reisplanner-gtfs", "reisplanner-iff"]
