--- a/reisplanner-gtfs/Cargo.toml
+++ b/reisplanner-gtfs/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["vosdavid2@gmail.com"]
 
 [dependencies]
+reisplanner-utils = { path = "../reisplanner-utils", package = "reisplanner-utils" }
 reqwest = { version = "0.12.4", features = ["blocking"] }
 protobuf = "3.5.1"
 csv = "1.3.0"
