--- a/reisplanner-algorithm/Cargo.toml
+++ b/reisplanner-algorithm/Cargo.toml
@@ -17,5 +17,6 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 indicatif = "0.17.8"
 serde = { version = "1.0.204", features = ["derive"] }
 bincode = "1.3.3"
+dot-writer = "0.1.4"
 
 [dev-dependencies]
