--- a/reisplanner-algorithm/Cargo.toml
+++ b/reisplanner-algorithm/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 reisplanner-gtfs = { path = "../reisplanner-gtfs", package = "reisplanner-gtfs" }
-reisplanner-iff = { path = "../reisplanner-iff", package = "reisplanner-iff" }
+reisplanner-data = { path = "../reisplanner-data", package = "reisplanner-data" }
 tokio = { version = "1.38.0", features = ["full"] }
 rbs = "4.5.18"
 rbatis = "4.5.29"
