--- a/reisplanner-data/Cargo.toml
+++ b/reisplanner-data/Cargo.toml
@@ -17,3 +17,7 @@ serde = { version = "1.0.204", features = ["derive"] }
 csv = "1.3.0"
 encoding_rs = "0.8.34"
 encoding_rs_io = "0.1.7"
+reqwest = "0.12.9"
+zip = "2.2.0"
+thiserror = "1.0.63"
+httpdate = "1.0.3"
